--- a/Version3/道路分析.ipynb
+++ b/Version3/道路分析.ipynb
@@ -124,19 +124,22 @@
    ],
    "source": [
     "select_lst = [\n",
-    "    '天候名稱', '光線名稱',\n",
-    "    '道路類別-第1當事者-名稱', '速限-第1當事者', '道路型態大類別名稱', '道路型態子類別名稱',\n",
-    "    '事故位置大類別名稱', '事故位置子類別名稱', '路面狀況-路面鋪裝名稱', '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱',\n",
-    "    '道路障礙-障礙物名稱', '道路障礙-視距品質名稱', '道路障礙-視距名稱', '號誌-號誌種類名稱', '號誌-號誌動作名稱',\n",
-    "    '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分向設施子類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
-    "    '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱', '事故類型及型態大類別名稱',\n",
-    "    '事故類型及型態子類別名稱', '死亡受傷人數',\n",
-    "    '肇因研判子類別名稱-個別'\n",
-    "    # '經度', '緯度'\n",
+    "    '天候名稱', '光線名稱', \n",
+    "    '道路類別-第1當事者-名稱', '速限-第1當事者', \n",
+    "    # 保留大類別可能是冗長的\n",
+    "    '道路型態子類別名稱', '事故位置子類別名稱',\n",
+    "    '路面狀況-路面鋪裝名稱', '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱',\n",
+    "    '道路障礙-障礙物名稱', '道路障礙-視距品質名稱', '道路障礙-視距名稱',\n",
+    "    '號誌-號誌種類名稱', '號誌-號誌動作名稱',\n",
+    "    '車道劃分設施-分向設施子類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱', '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱',\n",
+    "    '事故類型及型態子類別名稱', '肇因研判子類別名稱-主要', '當事者區分-類別-子類別名稱-車種', '當事者屬-性-別名稱', '當事者事故發生時年齡',\n",
+    "    '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', '當事者行動狀態子類別名稱',\n",
+    "    '車輛撞擊部位子類別名稱-最初', '車輛撞擊部位子類別名稱-其他', '肇因研判子類別名稱-個別', '肇事逃逸類別名稱-是否肇逃',\n",
+    "    '死亡受傷人數'\n",
     "]\n",
     "\n",
     "def preprocess(input_data, select_lst):\n",
-    "    \n",
+    "    # 篩選到第一個順位，因為注重的是單次事故的情況\n",
     "    sample_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
     "    sample_data = sample_data[sample_data['發生月份'] < 11]\n",
     "    dataA = sample_data[select_lst]\n",
@@ -144,6 +147,9 @@
     "    # 將資料分出死亡和受傷，合併到原本的資料後去除多餘的死亡受傷人數\n",
     "    death_injury_data = split_death_injury(dataA['死亡受傷人數'])\n",
     "    dist_df = pd.concat([dataA, death_injury_data], axis=1)\n",
+    "    # 補齊缺失值\n",
+    "    dist_df[select_lst] = dist_df[select_lst].fillna('未紀錄')\n",
+    "\n",
     "    dist_df.drop(columns=['死亡受傷人數'], inplace=True)\n",
     "    \n",
     "    return dist_df\n",
@@ -151,8 +157,37 @@
     "dist_dfA1 = preprocess(dataA1, select_lst)\n",
     "dist_dfA2 = preprocess(dataA2, select_lst)\n",
     "# Concat\n",
-    "rbind_data = pd.concat([dist_dfA1, dist_dfA2], axis=0, ignore_index=True)\n",
+    "rbind_data = pd.concat([dist_dfA1, dist_dfA2], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7641f04f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins_age = [0, 14, 24, 34, 44, 54, 64, 74, float('inf')]\n",
+    "labels_age = ['未滿15歲', '15~24', '25~34', '35~44', '45~54', '55~64', '65~74', '75+']\n",
     "\n",
+    "rbind_data['當事者事故發生時年齡'] = pd.cut(rbind_data['當事者事故發生時年齡'], bins=bins_age, labels=labels_age, right=False)\n",
+    "\n",
+    "rbind_data['當事者事故發生時年齡'] = rbind_data['當事者事故發生時年齡'].cat.add_categories('未知')\n",
+    "rbind_data['當事者事故發生時年齡'] = rbind_data['當事者事故發生時年齡'].fillna('未知')\n",
+    "\n",
+    "bins_speed = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, float('inf')]\n",
+    "labels_speed = ['0-10', '11-20', '21-30', '31-40', '41-50', '51-60', '61-70', '71-80', '81-90', '91-100', '101-110', '110+']\n",
+    "\n",
+    "rbind_data['速限-第1當事者'] = pd.cut(rbind_data['速限-第1當事者'], bins=bins_speed, labels=labels_speed, right=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4ecf4fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sample\n",
     "# rbind_data = rbind_data.sample(frac=0.3, random_state=43)\n",
     "# sample_data_to_map.reset_index(drop=True, inplace=True)\n",
