--- a/Version3/Grid_plot.ipynb
+++ b/Version3/Grid_plot.ipynb
@@ -4,18 +4,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/wangqiqian/Desktop/TrafficTDApython\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import re\n",
     "import os\n",
     "import sys\n",
+    "import pickle\n",
     "sys.path.append('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
     "\n",
     "current_dir_path = os.getcwd()\n",
@@ -25,24 +19,398 @@
     "\n",
     "# os.chdir(current_dir_path + '\\\\ultils')\n",
     "os.chdir(current_dir_path + '/ultils')\n",
-    "print(current_dir_path)\n",
     "\n",
-    "import time\n",
-    "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib.cm import get_cmap\n",
+    "from matplotlib.font_manager import FontProperties\n",
+    "import seaborn as sns\n",
     "\n",
+    "from sklearn.utils import resample\n",
     "from sklearn.cluster import AgglomerativeClustering\n",
+    "from Version3.tdamapper.plot import MapperLayoutInteractive\n",
     "\n",
-    "from functions import *\n",
-    "from chi import *\n",
-    "from regressionP import *\n",
-    "from models import *\n",
     "from utils_v3 import *\n",
+    "from functions import *\n",
+    "\n",
     "\n",
     "os.chdir('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
     "# os.chdir('C:/Users/USER/Desktop/TrafficTDApython/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1 = pd.read_csv(\"Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
+    "data2 = pd.read_csv(\"Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
+    "data3 = pd.read_csv(\"Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
+    "data4 = pd.read_csv(\"Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
+    "data5 = pd.read_csv(\"Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
+    "data6 = pd.read_csv(\"Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
+    "data7 = pd.read_csv(\"Data/NPA_TMA2_7.csv\", low_memory=False)[:-2]\n",
+    "data8 = pd.read_csv(\"Data/NPA_TMA2_8.csv\", low_memory=False)[:-2]\n",
+    "data9 = pd.read_csv(\"Data/NPA_TMA2_9.csv\", low_memory=False)[:-2]\n",
+    "data10 = pd.read_csv(\"Data/NPA_TMA2_10.csv\", low_memory=False)[:-2]\n",
+    "\n",
+    "dataA2 = pd.concat([data1, data2, data3, data4, data5, data6, data7, data8, data9, data10], ignore_index=True)\n",
+    "# dataA2 = pd.concat([data1, data2, data3, data4, data5], ignore_index=True)\n",
+    "\n",
+    "dataA1 = pd.read_csv(\"Data/NPA_TMA1_V3.csv\")[:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "select_lst = [\n",
+    "    # 月份是為了篩選每個月2萬筆\n",
+    "    '發生月份',\n",
+    "\n",
+    "    '天候名稱', '光線名稱', \n",
+    "    '道路類別-第1當事者-名稱', '速限-第1當事者', \n",
+    "    '路面狀況-路面鋪裝名稱', '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱',\n",
+    "    '道路障礙-障礙物名稱', '道路障礙-視距品質名稱', '道路障礙-視距名稱',\n",
+    "    '號誌-號誌種類名稱', '號誌-號誌動作名稱',\n",
+    "    '車道劃分設施-分道設施-快車道或一般車道間名稱', '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱',\n",
+    "    '當事者屬-性-別名稱', '當事者事故發生時年齡',\n",
+    "    '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱',\n",
+    "    '肇事逃逸類別名稱-是否肇逃',\n",
+    "    '死亡受傷人數',\n",
+    "\n",
+    "    # 同時保留大小類別可能是冗長的\n",
+    "    # 小類別\n",
+    "    # '道路型態子類別名稱', '事故位置子類別名稱',\n",
+    "    # '車道劃分設施-分向設施子類別名稱', \n",
+    "    # '事故類型及型態子類別名稱', '肇因研判子類別名稱-主要', '當事者區分-類別-子類別名稱-車種', '當事者行動狀態子類別名稱',\n",
+    "    # '車輛撞擊部位子類別名稱-最初', '車輛撞擊部位子類別名稱-其他', '肇因研判子類別名稱-個別', \n",
+    "\n",
+    "    # 大類別\n",
+    "    '道路型態大類別名稱', '事故位置大類別名稱',\n",
+    "    '車道劃分設施-分向設施大類別名稱',\n",
+    "    '事故類型及型態大類別名稱', '肇因研判大類別名稱-主要', '當事者區分-類別-大類別名稱-車種', '當事者行動狀態大類別名稱',\n",
+    "    '車輛撞擊部位大類別名稱-最初', '車輛撞擊部位大類別名稱-其他', '肇因研判大類別名稱-個別',\n",
+    "]\n",
+    "\n",
+    "def preprocess(input_data, select_lst):\n",
+    "    # 篩選到第一個順位，因為注重的是單次事故的情況\n",
+    "    sample_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
+    "    sample_data = sample_data[sample_data['發生月份'] < 11]\n",
+    "    dataA = sample_data[select_lst]\n",
+    "    \n",
+    "    # 將資料分出死亡和受傷，合併到原本的資料後去除多餘的死亡受傷人數\n",
+    "    death_injury_data = split_death_injury(dataA['死亡受傷人數'])\n",
+    "    dist_df = pd.concat([dataA, death_injury_data], axis=1)\n",
+    "    # 補齊缺失值\n",
+    "    dist_df[select_lst] = dist_df[select_lst].fillna('未紀錄')\n",
+    "\n",
+    "    dist_df.drop(columns=['死亡受傷人數'], inplace=True)\n",
+    "    \n",
+    "    return dist_df\n",
+    "\n",
+    "dist_dfA1 = preprocess(dataA1, select_lst)\n",
+    "dist_dfA2 = preprocess(dataA2, select_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n",
+      "16962\n",
+      "79\n",
+      "18109\n",
+      "67\n",
+      "15358\n",
+      "56\n",
+      "12836\n",
+      "60\n",
+      "13753\n",
+      "64\n",
+      "14670\n",
+      "75\n",
+      "17192\n",
+      "71\n",
+      "16275\n",
+      "65\n",
+      "14899\n",
+      "78\n",
+      "17879\n",
+      "下採樣前 A1 資料量：1383 / 下採樣後 A1 資料量：689\n",
+      "下採樣前 A1 資料量：317023 / 下採樣後 A2 資料量： 157933\n",
+      "舊 A1/A2 比例： 0.004362459506092618\n",
+      "新 A1/A2 比例： 0.004362609460973958\n"
+     ]
+    }
+   ],
+   "source": [
+    "sampling_ratio = 0.5\n",
+    "\n",
+    "# 計算 A1 和 A2 原始數據量比例\n",
+    "A1_total = len(dist_dfA1)\n",
+    "A2_total = len(dist_dfA2)\n",
+    "total_ratio = A1_total / A2_total  # 保留 A1/A2 的比例\n",
+    "\n",
+    "# 定義函數，按月份進行下採樣\n",
+    "def downsample_by_month_simple(A1, A2, sampling_ratio, total_ratio):\n",
+    "    A1_downsampled = pd.DataFrame()\n",
+    "    A2_downsampled = pd.DataFrame()\n",
+    "\n",
+    "    months = sorted(set(A1['發生月份']).intersection(A2['發生月份']))  # 確保月份匹配\n",
+    "\n",
+    "    for month in months:\n",
+    "        # 提取該月份的資料\n",
+    "        A1_month = A1[A1['發生月份'] == month]\n",
+    "        A2_month = A2[A2['發生月份'] == month]\n",
+    "\n",
+    "        # 計算該月份目標數量\n",
+    "        A1_target = int(len(A1_month) * sampling_ratio)\n",
+    "        A2_target = int(A1_target / total_ratio)\n",
+    "        print(A1_target)\n",
+    "        print(A2_target)\n",
+    "\n",
+    "        # 下採樣\n",
+    "        A1_sampled = resample(A1_month, replace=False, n_samples=A1_target, random_state=42)\n",
+    "        A2_sampled = resample(A2_month, replace=False, n_samples=A2_target, random_state=42)\n",
+    "\n",
+    "        # 合併到最終結果\n",
+    "        A1_downsampled = pd.concat([A1_downsampled, A1_sampled])\n",
+    "        A2_downsampled = pd.concat([A2_downsampled, A2_sampled])\n",
+    "\n",
+    "    return A1_downsampled.reset_index(drop=True), A2_downsampled.reset_index(drop=True)\n",
+    "\n",
+    "# 下採樣\n",
+    "downsampled_A1, downsampled_A2 = downsample_by_month_simple(dist_dfA1, dist_dfA2, sampling_ratio, total_ratio)\n",
+    "\n",
+    "# 檢查結果\n",
+    "print(f\"下採樣前 A1 資料量：{len(dist_dfA1)} / 下採樣後 A1 資料量：{len(downsampled_A1)}\")\n",
+    "print(f\"下採樣前 A1 資料量：{len(dist_dfA2)} / 下採樣後 A2 資料量： {len(downsampled_A2)}\")\n",
+    "print(\"舊 A1/A2 比例：\", len(dist_dfA1) / len(dist_dfA2))\n",
+    "print(\"新 A1/A2 比例：\", len(downsampled_A1) / len(downsampled_A2))\n",
+    "\n",
+    "# Concat\n",
+    "rbind_data = pd.concat([downsampled_A1, downsampled_A2], axis=0, ignore_index=True)\n",
+    "rbind_data.drop(columns=['發生月份'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dummy_data: (158622, 174)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bins_age = [0, 14, 24, 34, 44, 54, 64, 74, float('inf')]\n",
+    "labels_age = ['未滿15歲', '15~24', '25~34', '35~44', '45~54', '55~64', '65~74', '75+']\n",
+    "\n",
+    "rbind_data['當事者事故發生時年齡'] = pd.cut(rbind_data['當事者事故發生時年齡'], bins=bins_age, labels=labels_age, right=False)\n",
+    "\n",
+    "rbind_data['當事者事故發生時年齡'] = rbind_data['當事者事故發生時年齡'].cat.add_categories('未知')\n",
+    "rbind_data['當事者事故發生時年齡'] = rbind_data['當事者事故發生時年齡'].fillna('未知')\n",
+    "\n",
+    "bins_speed = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, float('inf')]\n",
+    "labels_speed = ['0-10', '11-20', '21-30', '31-40', '41-50', '51-60', '61-70', '71-80', '81-90', '91-100', '101-110', '110+']\n",
+    "\n",
+    "rbind_data['速限-第1當事者'] = pd.cut(rbind_data['速限-第1當事者'], bins=bins_speed, labels=labels_speed, right=False)\n",
+    "\n",
+    "# assert rbind_data.shape[0] == dist_dfA1.shape[0] + dist_dfA2.shape[0]\n",
+    "# Dummy\n",
+    "rbind_data[\"速限-第1當事者\"] = rbind_data[\"速限-第1當事者\"].astype(str)\n",
+    "dummy_data = pd.get_dummies(rbind_data)\n",
+    "\n",
+    "print('dummy_data:', dummy_data.shape)\n",
+    "\n",
+    "data_to_map = dummy_data.drop(['死亡', '受傷'], axis=1)\n",
+    "mapper_numpy = data_to_map.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/Users/wangqiqian/Desktop/TrafficTDApython/Version3/GridSearch/full_grid_halfdata.pkl', 'rb') as f:\n",
+    "    detailed_results_df = pickle.load(f)\n",
+    "\n",
+    "# detailed_results_df = detailed_results_df.sort_values(by='silhouette')\n",
+    "# detailed_results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MapperPlotter:\n",
+    "    def __init__(self, mapper_info, rbind_data, detailed_results_df, cmap='jet', seed=10, width=400, height=400):\n",
+    "        self.mapper_info = mapper_info\n",
+    "        self.rbind_data = rbind_data\n",
+    "        self.detailed_results_df = detailed_results_df\n",
+    "        self.cmap = cmap\n",
+    "        self.seed = seed\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "        self.mapper_plot = None\n",
+    "        self.full_info = None\n",
+    "\n",
+    "    def create_mapper_plot(self, choose, most_common_encoded_label):\n",
+    "        self.rbind_data['color_for_plot'] = pd.factorize(self.rbind_data[choose])[0]\n",
+    "        self.mapper_plot = MapperLayoutInteractive(\n",
+    "            self.mapper_info,\n",
+    "            colors=self.rbind_data['color_for_plot'].to_numpy(),\n",
+    "            cmap=self.cmap,\n",
+    "            agg=most_common_encoded_label,\n",
+    "            dim=2,\n",
+    "            iterations=30,\n",
+    "            seed=self.seed,\n",
+    "            width=self.width,\n",
+    "            height=self.height\n",
+    "        )\n",
+    "        print(\"Mapper plot created.\")\n",
+    "\n",
+    "    def extract_data(self):\n",
+    "        x = vars(self.mapper_plot._MapperLayoutInteractive__fig)['_data_objs'][1]['x']\n",
+    "        y = vars(self.mapper_plot._MapperLayoutInteractive__fig)['_data_objs'][1]['y']\n",
+    "        threeDimData = pd.DataFrame({'x': x, 'y': y})\n",
+    "        \n",
+    "        data_tuple = vars(self.mapper_plot._MapperLayoutInteractive__fig)['_data_objs'][1]['text']\n",
+    "        data = []\n",
+    "        for item in data_tuple:\n",
+    "            color = float(re.search(r'color: ([\\d.]+)', item).group(1))\n",
+    "            node = int(re.search(r'node: (\\d+)', item).group(1))\n",
+    "            size = int(re.search(r'size: (\\d+)', item).group(1))\n",
+    "            data.append({'color': color, 'node': node, 'size': size})\n",
+    "        component_info = pd.DataFrame(data)\n",
+    "        \n",
+    "        self.full_info = pd.concat([component_info, threeDimData], axis=1)\n",
+    "        mp_content_origin = vars(self.mapper_plot._MapperLayoutInteractive__graph)['_node']\n",
+    "        mp_content = pd.DataFrame.from_dict(mp_content_origin, orient='index').reset_index()\n",
+    "        mp_content.rename(columns={'index': 'node'}, inplace=True)\n",
+    "        \n",
+    "        self.full_info = pd.merge(self.full_info, mp_content, on=['node', 'size'], how='inner')\n",
+    "        print(\"Data extracted.\")\n",
+    "\n",
+    "    def map_colors(self, choose, color_mapping_fixed):\n",
+    "        # df = self.full_info[(self.full_info['size'] > 20)]\n",
+    "        df = self.full_info\n",
+    "        unique_values = self.rbind_data[[choose, 'color_for_plot']].drop_duplicates()\n",
+    "        df = df.merge(unique_values, left_on='color', right_on='color_for_plot', how='left')\n",
+    "\n",
+    "        # 使用外部提供的顏色映射表\n",
+    "        df['color_for_plot_fixed'] = df[choose].map(color_mapping_fixed)\n",
+    "        \n",
+    "        self.full_info = df\n",
+    "        self.color_palette = color_mapping_fixed\n",
+    "        print(\"Colors mapped using predefined mapping.\")\n",
+    "\n",
+    "    def plot(self, choose, unique_categories, color_palette, save_path=None):\n",
+    "        myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
+    "        clipped_size = np.clip(self.full_info['size'], None, 200)\n",
+    "\n",
+    "        plt.figure(figsize=(15, 12))\n",
+    "        scatter = plt.scatter(\n",
+    "            self.full_info['x'], self.full_info['y'],\n",
+    "            c=self.full_info['color_for_plot_fixed'].tolist(),\n",
+    "            edgecolors='black',\n",
+    "            linewidths=0.5,\n",
+    "            s=clipped_size,\n",
+    "            marker='o',\n",
+    "            alpha=1\n",
+    "        )\n",
+    "\n",
+    "        node_positions = {row['node']: (row['x'], row['y']) for _, row in self.full_info.iterrows()}\n",
+    "        graph = vars(self.mapper_plot._MapperLayoutInteractive__graph)\n",
+    "        edges = graph['edges']\n",
+    "        for edge in edges:\n",
+    "            if edge[0] in node_positions and edge[1] in node_positions:\n",
+    "                x_coords = [node_positions[edge[0]][0], node_positions[edge[1]][0]]\n",
+    "                y_coords = [node_positions[edge[0]][1], node_positions[edge[1]][1]]\n",
+    "                plt.plot(x_coords, y_coords, color='grey', alpha=0.5, linewidth=0.5, zorder=0)\n",
+    "\n",
+    "        # handles = [\n",
+    "        #     plt.Line2D(\n",
+    "        #         [0], [0],\n",
+    "        #         marker='o',\n",
+    "        #         color=color_palette(i),\n",
+    "        #         markersize=10,\n",
+    "        #         label=name\n",
+    "        #     ) for i, name in enumerate(unique_categories)\n",
+    "        # ]\n",
+    "\n",
+    "        # plt.legend(handles=handles, title=f\"{choose}\", loc='upper right', bbox_to_anchor=(1.4, 1))\n",
+    "        plt.xlabel('X')\n",
+    "        plt.ylabel('Y')\n",
+    "        plt.title('Mapper plot')\n",
+    "        plt.grid(True)\n",
+    "\n",
+    "        if save_path:\n",
+    "            plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
+    "            print(f\"Plot saved to {save_path}\")\n",
+    "        else:\n",
+    "            plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/w2/_g9w5yys0f171q4qqm469z1h0000gn/T/ipykernel_86136/1643206544.py:7: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
+      "  color_palette = get_cmap(\"tab20\", len(unique_categories))\n"
+     ]
+    }
+   ],
+   "source": [
+    "choose = '肇因研判大類別名稱-個別'\n",
+    "\n",
+    "unique_categories = rbind_data[choose].dropna().unique()\n",
+    "unique_categories.sort()\n",
+    "\n",
+    "# 統一顏色\n",
+    "color_palette = get_cmap(\"tab20\", len(unique_categories))\n",
+    "color_mapping_fixed = {category: color_palette(i) for i, category in enumerate(unique_categories)}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(detailed_results_df.shape[0]):\n",
+    "\n",
+    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'].iloc[i][0], rbind_data, detailed_results_df)\n",
+    "    mapper_plotter.create_mapper_plot(choose, most_common_encoded_label)\n",
+    "    mapper_plotter.extract_data()\n",
+    "    mapper_plotter.map_colors(choose, color_mapping_fixed)\n",
+    "\n",
+    "    o = detailed_results_df['overlap'].iloc[i]\n",
+    "    i = detailed_results_df['interval'].iloc[i]\n",
+    "    mapper_plotter.plot(choose, unique_categories, color_palette, save_path=f'Version3/GridSearch/Plots/plot_o{o}i{i}.png')\n",
+    "    # mapper_plotter.plot(choose, unique_categories, color_palette)"
    ]
   }
  ],
