--- a/Version3/道路分析.ipynb
+++ b/Version3/道路分析.ipynb
@@ -125,11 +125,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93633aaf",
+   "id": "a1532924",
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = '受傷'\n",
+    "choose = '道路障礙-視距名稱'\n",
     "# choose = '死亡'\n",
     "\n",
     "unique_categories = rbind_data[choose].dropna().unique()\n",
