--- a/Version3/react.ipynb
+++ b/Version3/react.ipynb
@@ -2,18 +2,221 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\USER\\Desktop\\TrafficTDApython\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "# sys.path.append('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
+    "sys.path.append('C:/Users/USER/Desktop/TrafficTDApython/')\n",
+    "\n",
+    "current_dir_path = os.getcwd()\n",
+    "current_file_path = os.path.abspath(current_dir_path)\n",
+    "current_dir_path = os.path.dirname(current_file_path)\n",
+    "parent_dir_path = os.path.dirname(current_dir_path)\n",
+    "\n",
+    "os.chdir(current_dir_path + '\\\\ultils')\n",
+    "# os.chdir(current_dir_path + '/ultils')\n",
+    "print(current_dir_path)\n",
+    "\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.cm import get_cmap\n",
+    "\n",
+    "import networkx as nx\n",
+    "import networkx as nx\n",
+    "from pyvis.network import Network\n",
+    "from matplotlib.colors import to_rgba\n",
+    "from itertools import combinations\n",
+    "\n",
+    "from utils_v3 import *\n",
+    "\n",
+    "# os.chdir('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
+    "os.chdir('C:/Users/USER/Desktop/TrafficTDApython/')\n",
+    "\n",
+    "from Version3.tdamapper.core_old import MapperAlgorithm\n",
+    "from Version3.tdamapper.cover import CubicalCover\n",
+    "from Version3.tdamapper.clustering import FailSafeClustering\n",
+    "from Version3.tdamapper.plot import MapperLayoutInteractive\n",
+    "\n",
+    "plt.rcParams['font.sans-serif'] = ['Microsoft YaHei']\n",
+    "plt.rcParams['axes.unicode_minus'] = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "from pyvis.network import Network\n",
-    "import matplotlib.pyplot as plt\n",
-    "import networkx as nx\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib.colors import to_rgba\n",
+    "data1 = pd.read_csv(\"Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
+    "data2 = pd.read_csv(\"Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
+    "data3 = pd.read_csv(\"Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
+    "data4 = pd.read_csv(\"Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
+    "data5 = pd.read_csv(\"Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
+    "data6 = pd.read_csv(\"Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
+    "data7 = pd.read_csv(\"Data/NPA_TMA2_7.csv\", low_memory=False)[:-2]\n",
+    "data8 = pd.read_csv(\"Data/NPA_TMA2_8.csv\", low_memory=False)[:-2]\n",
+    "data9 = pd.read_csv(\"Data/NPA_TMA2_9.csv\", low_memory=False)[:-2]\n",
+    "data10 = pd.read_csv(\"Data/NPA_TMA2_10.csv\", low_memory=False)[:-2]\n",
     "\n",
+    "dataA2 = pd.concat([data1, data2, data3, data4, data5, data6, data7, data8, data9, data10], ignore_index=True)\n",
+    "# dataA2 = pd.concat([data1, data2, data3, data4, data5], ignore_index=True)\n",
+    "\n",
+    "dataA1 = pd.read_csv(\"Data/NPA_TMA1_V3.csv\")[:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_6108\\3881538032.py:57: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  pass_A1.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_6108\\3881538032.py:58: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  pass_A2.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "select_lst = [\n",
+    "    # 月份是為了篩選每個月2萬筆\n",
+    "    '發生月份',\n",
+    "\n",
+    "    '天候名稱', '光線名稱', \n",
+    "    '道路類別-第1當事者-名稱', '速限-第1當事者', \n",
+    "    '路面狀況-路面鋪裝名稱', '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱',\n",
+    "    '道路障礙-障礙物名稱', '道路障礙-視距品質名稱', '道路障礙-視距名稱',\n",
+    "    '號誌-號誌種類名稱', '號誌-號誌動作名稱',\n",
+    "    '車道劃分設施-分道設施-快車道或一般車道間名稱', '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱',\n",
+    "    '當事者屬-性-別名稱', '當事者事故發生時年齡',\n",
+    "    '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱',\n",
+    "    '肇事逃逸類別名稱-是否肇逃',\n",
+    "    '死亡受傷人數',\n",
+    "\n",
+    "    # 大類別\n",
+    "    '道路型態大類別名稱', '事故位置大類別名稱',\n",
+    "    '車道劃分設施-分向設施大類別名稱',\n",
+    "    '事故類型及型態大類別名稱', '當事者區分-類別-大類別名稱-車種', '當事者行動狀態大類別名稱',\n",
+    "\n",
+    "    # 最初的值只有一種\n",
+    "    # '車輛撞擊部位大類別名稱-最初', \n",
+    "    '車輛撞擊部位大類別名稱-其他',\n",
+    "    \n",
+    "    # 兩個相似且幾乎全部資料都一樣\n",
+    "    # '肇因研判大類別名稱-主要',\n",
+    "    # '肇因研判大類別名稱-個別',\n",
+    "\n",
+    "    # 分析新增的\n",
+    "    # '事故類型及型態子類別名稱'\n",
+    "]\n",
+    "select_lst = dataA1.columns\n",
+    "\n",
+    "def preprocess(input_data, select_lst):\n",
+    "    # 篩選到第一個順位，因為注重的是單次事故的情況\n",
+    "    sample_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
+    "    sample_data = sample_data[sample_data['發生月份'] < 11]\n",
+    "    dataA = sample_data[select_lst]\n",
+    "    \n",
+    "    # 將資料分出死亡和受傷，合併到原本的資料後去除多餘的死亡受傷人數\n",
+    "    death_injury_data = split_death_injury(dataA['死亡受傷人數'])\n",
+    "    dist_df = pd.concat([dataA, death_injury_data], axis=1)\n",
+    "    # 補齊缺失值\n",
+    "    dist_df[select_lst] = dist_df[select_lst].fillna('未紀錄')\n",
+    "\n",
+    "    dist_df.drop(columns=['死亡受傷人數'], inplace=True)\n",
+    "    \n",
+    "    return dist_df\n",
+    "\n",
+    "dist_dfA1 = preprocess(dataA1, select_lst)\n",
+    "dist_dfA2 = preprocess(dataA2, select_lst)\n",
+    "\n",
+    "pass_A2 = dist_dfA2[dist_dfA2['當事者行動狀態大類別名稱'] == '人的狀態']\n",
+    "pass_A1 = dist_dfA1[dist_dfA1['當事者行動狀態大類別名稱'] == '人的狀態']\n",
+    "\n",
+    "# drop\n",
+    "pass_A1.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
+    "pass_A2.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
+    "\n",
+    "pass_A2 = pass_A2[pass_A2['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄']\n",
+    "pass_A1 = pass_A1[pass_A1['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄']\n",
+    "pass_A2 = pass_A2[pass_A2['行動電話或電腦或其他相類功能裝置名稱'] != '不明']\n",
+    "pass_A1 = pass_A1[pass_A1['行動電話或電腦或其他相類功能裝置名稱'] != '不明']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dummy_data: (3117, 3349)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Concat\n",
+    "rbind_data = pd.concat([pass_A1, pass_A2], axis=0, ignore_index=True)\n",
+    "rbind_data.drop(columns=['發生月份'], inplace=True)\n",
+    "# rbind_data['速限_int'] = rbind_data['速限-第1當事者']\n",
+    "# rbind_data['年齡_int'] = rbind_data['當事者事故發生時年齡']\n",
+    "\n",
+    "bins_age = [0, 14, 24, 34, 44, 54, 64, 74, float('inf')]\n",
+    "labels_age = ['未滿15歲', '15~24', '25~34', '35~44', '45~54', '55~64', '65~74', '75+']\n",
+    "\n",
+    "rbind_data['當事者事故發生時年齡'] = pd.cut(rbind_data['當事者事故發生時年齡'], bins=bins_age, labels=labels_age, right=False)\n",
+    "\n",
+    "rbind_data['當事者事故發生時年齡'] = rbind_data['當事者事故發生時年齡'].cat.add_categories('未知')\n",
+    "rbind_data['當事者事故發生時年齡'] = rbind_data['當事者事故發生時年齡'].fillna('未知')\n",
+    "\n",
+    "bins_speed = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, float('inf')]\n",
+    "labels_speed = ['0-10', '11-20', '21-30', '31-40', '41-50', '51-60', '61-70', '71-80', '81-90', '91-100', '101-110', '110+']\n",
+    "\n",
+    "rbind_data['速限-第1當事者'] = pd.cut(rbind_data['速限-第1當事者'], bins=bins_speed, labels=labels_speed, right=False)\n",
+    "\n",
+    "# assert rbind_data.shape[0] == dist_dfA1.shape[0] + dist_dfA2.shape[0]\n",
+    "# Dummy\n",
+    "rbind_data[\"速限-第1當事者\"] = rbind_data[\"速限-第1當事者\"].astype(str)\n",
+    "dummy_data = pd.get_dummies(rbind_data)\n",
+    "\n",
+    "print('dummy_data:', dummy_data.shape)\n",
+    "\n",
+    "data_to_map = dummy_data.drop(['死亡', '受傷'], axis=1)\n",
+    "mapper_numpy = data_to_map.to_numpy()\n",
+    "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class MapperPlotter:\n",
     "    def __init__(self, mapper_info, rbind_data, cmap='jet', seed=10, width=400, height=400):\n",
     "        self.mapper_info = mapper_info\n",
@@ -69,10 +272,14 @@
     "\n",
     "        return self.full_info\n",
     "\n",
-    "    def map_colors(self, choose, size=0, threshold=5):\n",
+    "    def map_colors(self, choose, size=0, threshold=5, range_lst = None):\n",
+    "        # range_lst [x_min, x_max, y_min, y_max]\n",
     "        # 過濾大小的資料點\n",
     "        df = self.full_info[(self.full_info['size'] > size)]\n",
     "\n",
+    "        if range_lst is not None:\n",
+    "            # 車的分析適用\n",
+    "            df = df[(df['x'] > range_lst[0]) & (df['y'] < range_lst[2]) & (df['x'] < range_lst[1]) & (df['y'] > range_lst[3])]\n",
     "        # 計算每個標籤的出現次數\n",
     "        category_counts = self.rbind_data[choose].value_counts()\n",
     "\n",
@@ -214,18 +421,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = '道路型態大類別名稱'\n",
+    "output_file = 'C:/Users/USER/Desktop/TrafficTDApython/Version3/Gridsearch/Component12Pass/results_o4i8.pkl'\n",
     "\n",
-    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'].iloc[33][0], rbind_data, seed=10)\n",
+    "with open(output_file, 'rb') as f:\n",
+    "    detailed_results_df = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapper plot created.\n",
+      "Data extracted.\n",
+      "Graph created with nodes and edges based on ids intersection.\n",
+      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_6108\\2035884311.py:172: FutureWarning:\n",
+      "\n",
+      "The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "React/passenger_o4i8.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "choose = '天候名稱'\n",
+    "\n",
+    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=10)\n",
     "mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
     "full_info = mapper_plotter.extract_data()\n",
     "mapper_plotter.create_graph()\n",
     "G, color_mapping = mapper_plotter.map_colors_nx(mapper_plotter.G, choose, threshold=0)\n",
-    "mapper_plotter.plot_simple_pyvis_graph(G, filename=\"my_simple_network.html\")"
+    "mapper_plotter.plot_simple_pyvis_graph(G, filename=\"React/passenger_o4i8.html\")"
    ]
   }
  ],
