laptop to desktop

--- a/Version3/Describe.ipynb
+++ b/Version3/Describe.ipynb
@@ -9,23 +9,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\USER\\Desktop\\TrafficTDApython\n"
+      "/Users/wangqiqian/Desktop/TrafficTDApython\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "import sys\n",
-    "# sys.path.append('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
-    "sys.path.append('C:/Users/USER/Desktop/TrafficTDApython/')\n",
+    "sys.path.append('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
+    "# sys.path.append('C:/Users/USER/Desktop/TrafficTDApython/')\n",
     "\n",
     "current_dir_path = os.getcwd()\n",
     "current_file_path = os.path.abspath(current_dir_path)\n",
     "current_dir_path = os.path.dirname(current_file_path)\n",
     "parent_dir_path = os.path.dirname(current_dir_path)\n",
     "\n",
-    "os.chdir(current_dir_path + '\\\\ultils')\n",
-    "# os.chdir(current_dir_path + '/ultils')\n",
+    "# os.chdir(current_dir_path + '\\\\ultils')\n",
+    "os.chdir(current_dir_path + '/ultils')\n",
     "print(current_dir_path)\n",
     "\n",
     "import time\n",
@@ -48,8 +48,8 @@
     "from utils_v3 import *\n",
     "from plots import *\n",
     "\n",
-    "# os.chdir('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
-    "os.chdir('C:/Users/USER/Desktop/TrafficTDApython/')\n",
+    "os.chdir('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
+    "# os.chdir('C:/Users/USER/Desktop/TrafficTDApython/')\n",
     "\n",
     "from Version3.tdamapper.core_old import MapperAlgorithm\n",
     "from Version3.tdamapper.cover import CubicalCover\n",
@@ -57,53 +57,33 @@
     "from Version3.tdamapper.plot import MapperLayoutInteractive\n",
     "from tdamapper.plot import MapperPlot\n",
     "\n",
-    "# myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
-    "# sns.set(style=\"whitegrid\", font=myfont.get_name())\n",
+    "myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
+    "sns.set(style=\"whitegrid\", font=myfont.get_name())\n",
     "plt.rcParams['font.sans-serif'] = ['Microsoft YaHei']\n",
     "plt.rcParams['axes.unicode_minus'] = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rbind_data = pd.read_csv('Data/rbind_data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 205,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(317023, 52)"
-      ]
-     },
-     "execution_count": 205,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rbind_data[rbind_data['事故類別名稱'] == 'A2'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 過濾台灣地區\n",
-    "filtered_rbind_data =  rbind_data[\n",
-    "    (rbind_data[\"緯度\"] >= 20) & (rbind_data[\"緯度\"] <= 26) &\n",
-    "    (rbind_data[\"經度\"] >= 119) & (rbind_data[\"經度\"] <= 123.5)\n",
-    "]\n",
-    "filtered_rbind_data = filtered_rbind_data[filtered_rbind_data['速限-第1當事者'] < 200]"
+    "data1 = pd.read_csv(\"Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
+    "data2 = pd.read_csv(\"Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
+    "data3 = pd.read_csv(\"Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
+    "data4 = pd.read_csv(\"Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
+    "data5 = pd.read_csv(\"Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
+    "data6 = pd.read_csv(\"Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
+    "data7 = pd.read_csv(\"Data/NPA_TMA2_7.csv\", low_memory=False)[:-2]\n",
+    "data8 = pd.read_csv(\"Data/NPA_TMA2_8.csv\", low_memory=False)[:-2]\n",
+    "data9 = pd.read_csv(\"Data/NPA_TMA2_9.csv\", low_memory=False)[:-2]\n",
+    "data10 = pd.read_csv(\"Data/NPA_TMA2_10.csv\", low_memory=False)[:-2]\n",
+    "\n",
+    "dataA2 = pd.concat([data1, data2, data3, data4, data5, data6, data7, data8, data9, data10], ignore_index=True)\n",
+    "# dataA2 = pd.concat([data1, data2, data3, data4, data5], ignore_index=True)\n",
+    "\n",
+    "dataA1 = pd.read_csv(\"Data/NPA_TMA1_V3.csv\")[:-2]"
    ]
   },
   {
@@ -1175,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
