--- a/Version3/Grid_Search.ipynb
+++ b/Version3/Grid_Search.ipynb
@@ -546,7 +546,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Cllava",
    "language": "python",
    "name": "python3"
   },
