--- a/Version3/OriginModel.ipynb
+++ b/Version3/OriginModel.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: 'C:\\\\System\\\\Library\\\\Fonts\\\\PingFang.ttc'\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -46,7 +54,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1 = pd.read_csv(\"../Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
+    "data2 = pd.read_csv(\"../Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
+    "data3 = pd.read_csv(\"../Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
+    "data4 = pd.read_csv(\"../Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
+    "data5 = pd.read_csv(\"../Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
+    "data6 = pd.read_csv(\"../Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
+    "data7 = pd.read_csv(\"../Data/NPA_TMA2_7.csv\", low_memory=False)[:-2]\n",
+    "data8 = pd.read_csv(\"../Data/NPA_TMA2_8.csv\", low_memory=False)[:-2]\n",
+    "data9 = pd.read_csv(\"../Data/NPA_TMA2_9.csv\", low_memory=False)[:-2]\n",
+    "data10 = pd.read_csv(\"../Data/NPA_TMA2_10.csv\", low_memory=False)[:-2]\n",
+    "\n",
+    "dataA2 = pd.concat([data1, data2, data3, data4, data5, data6, data7, data8, data9, data10], ignore_index=True)\n",
+    "# dataA2 = pd.concat([data1, data2, data3, data4, data5], ignore_index=True)\n",
+    "\n",
+    "dataA1 = pd.read_csv(\"../Data/NPA_TMA1_V3.csv\")[:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,13 +103,15 @@
     "# full data\n",
     "full_car = pd.concat([car_0, car_1, car_2, car_3, car_21, car_out], axis=0)\n",
     "full_car['當事者行動狀態大類別名稱'] = 'car'\n",
-    "pass_data['當事者行動狀態大類別名稱'] = 'pass'\n",
-    "full_data = pd.concat([car_0, car_1, car_2, car_3, car_21, car_out, pass_data], axis=0)"
+    "passforfull = pass_data.copy()\n",
+    "passforfull['當事者行動狀態大類別名稱'] = 'pass'\n",
+    "full_data = pd.concat([full_car, passforfull], axis=0)\n",
+    "car_out = pd.concat([car_out, car_21], axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +135,7 @@
     "    # 兩個欄位只有兩個觀察值不同\n",
     "    '肇因研判大類別名稱-主要',\n",
     "    # '肇因研判大類別名稱-個別',\n",
+    "    '受傷', '死亡'\n",
     "]\n",
     "\n",
     "# select data\n",
@@ -109,7 +143,6 @@
     "car_1 = car_1[select_lst]\n",
     "car_2 = car_2[select_lst]\n",
     "car_3 = car_3[select_lst]\n",
-    "car_21 = car_21[select_lst]\n",
     "car_out = car_out[select_lst]\n",
     "pass_data = pass_data[select_lst]\n",
     "select_lst.append('當事者行動狀態大類別名稱')\n",
@@ -118,7 +151,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get dummy\n",
+    "car_0 = pd.get_dummies(car_0)\n",
+    "car_1 = pd.get_dummies(car_1)\n",
+    "car_2 = pd.get_dummies(car_2)\n",
+    "car_3 = pd.get_dummies(car_3)\n",
+    "car_out = pd.get_dummies(car_out)\n",
+    "pass_data = pd.get_dummies(pass_data)\n",
+    "full_data = pd.get_dummies(full_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    2910\n",
+      "1      10\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    30072\n",
+      "1      116\n",
+      "2        3\n",
+      "3        1\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    51765\n",
+      "1      214\n",
+      "2        2\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    4905\n",
+      "1      17\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    4336\n",
+      "1      44\n",
+      "2       4\n",
+      "3       2\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    3038\n",
+      "1      57\n",
+      "2       1\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    97026\n",
+      "1      458\n",
+      "2       10\n",
+      "3        3\n",
+      "Name: 死亡, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(car_0['死亡'].value_counts())\n",
+    "print(car_1['死亡'].value_counts())\n",
+    "print(car_2['死亡'].value_counts())\n",
+    "print(car_3['死亡'].value_counts())\n",
+    "print(car_out['死亡'].value_counts())\n",
+    "print(pass_data['死亡'].value_counts())\n",
+    "print(full_data['死亡'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,49 +230,167 @@
     "    X = new_input_data.drop(columns=['y'])\n",
     "    y = new_input_data['y']\n",
     "\n",
-    "    return X, y\n",
-    "\n",
-    "Xfull, yfull = get_train_test_data(dummy_data)\n",
-    "Xfull = Xfull.astype(float)"
+    "    return X, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_svc_matrix, full_svc_score, full_svc_cm, full_svc_y_resampled_test, full_svc_decision_scores = logistic_cm_gridsearch(Xfull, yfull, threshold=5)"
+    "car_0_X, car_0_y = get_train_test_data(car_0)\n",
+    "car_1_X, car_1_y = get_train_test_data(car_1)\n",
+    "car_2_X, car_2_y = get_train_test_data(car_2)\n",
+    "car_3_X, car_3_y = get_train_test_data(car_3)\n",
+    "car_out_X, car_out_y = get_train_test_data(car_out)\n",
+    "pass_data_X, pass_data_y = get_train_test_data(pass_data)\n",
+    "full_data_X, full_data_y = get_train_test_data(full_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[90 30]\n",
-      " [37 83]]\n",
-      "0.7208333333333333\n"
+      "Best parameters found by GridSearchCV: {'C': 1, 'penalty': 'l2'}\n",
+      "Best parameters found by GridSearchCV: {'C': 1, 'penalty': 'l2'}\n",
+      "Best parameters found by GridSearchCV: {'C': 1, 'penalty': 'l2'}\n",
+      "Best parameters found by GridSearchCV: {'C': 1, 'penalty': 'l2'}\n",
+      "Best parameters found by GridSearchCV: {'C': 1, 'penalty': 'l2'}\n",
+      "Best parameters found by GridSearchCV: {'C': 1, 'penalty': 'l2'}\n",
+      "Best parameters found by GridSearchCV: {'C': 1, 'penalty': 'l2'}\n"
      ]
     }
    ],
    "source": [
-    "y_pred = (full_svc_decision_scores >= 0.4).astype(int)\n",
+    "car0_logistic_metric, car0_logistic_score, car0_logistic_cm, car0_y_resampled_test, car0_decision_scores = logistic_cm_gridsearch(car_0_X, car_0_y, threshold=5)\n",
+    "car1_logistic_metric, car1_logistic_score, car1_logistic_cm, car1_y_resampled_test, car1_decision_scores = logistic_cm_gridsearch(car_1_X, car_1_y, threshold=5)\n",
+    "car2_logistic_metric, car2_logistic_score, car2_logistic_cm, car2_y_resampled_test, car2_decision_scores = logistic_cm_gridsearch(car_2_X, car_2_y, threshold=5)\n",
+    "car3_logistic_metric, car3_logistic_score, car3_logistic_cm, car3_y_resampled_test, car3_decision_scores = logistic_cm_gridsearch(car_3_X, car_3_y, threshold=5)\n",
+    "carout_logistic_metric, carout_logistic_score, carout_logistic_cm, carout_y_resampled_test, carout_decision_scores = logistic_cm_gridsearch(car_out_X, car_out_y, threshold=5)\n",
+    "pass_logistic_metric, pass_logistic_score, pass_logistic_cm, pass_y_resampled_test, pass_decision_scores = logistic_cm_gridsearch(pass_data_X, pass_data_y, threshold=5)\n",
+    "full_logistic_metric, full_logistic_score, full_logistic_cm, full_y_resampled_test, full_decision_scores = logistic_cm_gridsearch(full_data_X, full_data_y, threshold=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_score(resampled_test, decision_scores, threshold=0.5):\n",
+    "    \n",
+    "    y_pred = (decision_scores >= threshold).astype(int)\n",
     "\n",
-    "conf_matrix = confusion_matrix(full_svc_y_resampled_test, y_pred)\n",
+    "    conf_matrix = confusion_matrix(resampled_test, y_pred)\n",
+    "    acc = accuracy_score(resampled_test, y_pred)\n",
+    "    \n",
+    "    return conf_matrix, acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[2, 2],\n",
+       "        [2, 2]], dtype=int64),\n",
+       " 0.5)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_score(car0_y_resampled_test, car0_decision_scores, 0.02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save car0_y_resampled_test, car0_decision_scores\n",
     "\n",
-    "print(conf_matrix)\n",
-    "print(accuracy_score(full_svc_y_resampled_test, y_pred))"
+    "metrics_df = pd.DataFrame({\n",
+    "    'score': car0_decision_scores,\n",
+    "    'y': car0_y_resampled_test\n",
+    "})\n",
+    "metrics_df.to_csv(\"./ModelPerformance/car0.csv\", index=False)\n",
+    "\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'score': car1_decision_scores,\n",
+    "    'y': car1_y_resampled_test\n",
+    "})\n",
+    "metrics_df.to_csv(\"./ModelPerformance/car1.csv\", index=False)\n",
+    "\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'score': car2_decision_scores,\n",
+    "    'y': car2_y_resampled_test\n",
+    "})\n",
+    "metrics_df.to_csv(\"./ModelPerformance/car2.csv\", index=False)\n",
+    "\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'score': car3_decision_scores,\n",
+    "    'y': car3_y_resampled_test\n",
+    "})\n",
+    "metrics_df.to_csv(\"./ModelPerformance/car3.csv\", index=False)\n",
+    "\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'score': carout_decision_scores,\n",
+    "    'y': carout_y_resampled_test\n",
+    "})\n",
+    "metrics_df.to_csv(\"./ModelPerformance/carout.csv\", index=False)\n",
+    "\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'score': pass_decision_scores,\n",
+    "    'y': pass_y_resampled_test\n",
+    "})\n",
+    "metrics_df.to_csv(\"./ModelPerformance/pass.csv\", index=False)\n",
+    "\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'score': full_decision_scores,\n",
+    "    'y': full_y_resampled_test\n",
+    "})\n",
+    "metrics_df.to_csv(\"./ModelPerformance/full.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00739187, 0.01219601, 0.0215474 , 0.02724232, 0.04964881,\n",
+       "       0.00894119, 0.02023626, 0.01526169])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car0_decision_scores"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Cllava",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
